--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
         <!-- Scripts -->
         <script src="js/mathjax_config.js" defer></script>
         <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" defer></script>
+        <script src="js/spacing.js" defer></script>
         <script src="js/rxml.js" defer></script>
         <script src="js/fade.js" defer></script>
         <script src="js/qr_code.js" defer></script>
