--- a/index.html
+++ b/index.html
@@ -98,9 +98,11 @@
                 <a href="https://orcid.org/0000-0002-5438-5490" target="_blank"><i class="fab fa-orcid"></i></a>
                 <a href="https://github.com/saintbenjamin" target="_blank"><i class="fab fa-github"></i></a>
                 <a href="https://www.youtube.com/channel/UCX-16rGG_fl0_pAXfvp39aQ" target="_blank"><i class="fab fa-youtube"></i></a> 
+                <!-- QR popup trigger -->
+                <button class="qr-button icon-btn" id="showQrButton" aria-label="Show QR code">
+                    <i class="fas fa-qrcode"></i>
+                </button>
             </div>
-            <!-- QR popup trigger -->
-            <button class="qr-button" id="showQrButton">QR Code</button>
             <!-- <p class="outlined-text">&copy; 2024 Benjamin J. Choi. All rights reserved.</p> -->
         </footer>
         <!-- Overlay for QR popup -->
