--- a/header.html
+++ b/header.html
@@ -1,4 +1,13 @@
 <header>
+    <div class="header-icon-container">
+        <a href="https://orcid.org/0000-0002-5438-5490" target="_blank"><i class="fab fa-orcid"></i></a>
+        <a href="https://github.com/saintbenjamin" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="https://www.youtube.com/channel/UCX-16rGG_fl0_pAXfvp39aQ" target="_blank"><i class="fab fa-youtube"></i></a> 
+        <!-- QR popup trigger -->
+        <button class="qr-button icon-btn qr-trigger" aria-label="Show QR code">
+            <i class="fas fa-qrcode"></i>
+        </button>
+    </div>
     <div class="hamburger" onclick="toggleMenu()">
         <div></div>
         <div></div>
