--- a/index.html
+++ b/index.html
@@ -144,11 +144,13 @@
         <!-- Scripts -->
         <script src="js/mathjax_config.js" defer></script>
         <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" defer></script>
-        <script src="js/hamburger.js" defer></script>
+        <script src="js/menu_toggle.js" defer></script>
         <script src="js/spacing.js" defer></script>
-        <script src="js/rxml.js" defer></script>
+        <script src="js/helpers.js" defer></script>
+        <script src="js/renderers.js" defer></script>
+        <script src="js/loader.js" defer></script>
         <script src="js/fade.js" defer></script>
         <script src="js/qr_code.js" defer></script>
-        <script src="js/header_footer.js" defer></script>
+        <script src="js/load_fragment.js" defer></script>
     </body>
 </html>
