--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                 <li class="outlined-text-semibig"><a href="#links">Links</a></li>
             </ul>
         </header>
+        <!-- Main section -->
         <main>
             <!-- Scripture section -->
             <div class="menus" id="jesus">
