--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Benjamin J. Choi</title>
         <!-- Styles -->
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">      
-        <link rel="stylesheet" href="css/main.css">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="css/00_tokens.css">
+        <link rel="stylesheet" href="css/10_fonts.css">
+        <link rel="stylesheet" href="css/20_base_layout.css">
+        <link rel="stylesheet" href="css/30_typography_lists.css">
+        <link rel="stylesheet" href="css/40_icons_buttons_overlays.css">
+        <link rel="stylesheet" href="css/50_menu_hamburger.css">
+        <link rel="stylesheet" href="css/60_background_content.css">
+        <link rel="stylesheet" href="css/70_arxivfeed.css">
+        <link rel="stylesheet" href="css/80_responsive.css">
         <!-- Favicons -->
         <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
