--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <div class="header-icon-container">
                 <a href="https://orcid.org/0000-0002-5438-5490" target="_blank"><i class="fab fa-orcid"></i></a>
                 <a href="https://github.com/saintbenjamin" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="https://www.instagram.com/benji_johannes/" target="_blank"><i class="fab fa-instagram-square"></i></a>
                 <a href="https://www.youtube.com/channel/UCX-16rGG_fl0_pAXfvp39aQ" target="_blank"><i class="fab fa-youtube"></i></a> 
                 <!-- QR popup trigger -->
                 <button class="qr-button icon-btn qr-trigger" aria-label="Show QR code">
@@ -132,6 +133,7 @@
             <div class="footer-icon-container">
                 <a href="https://orcid.org/0000-0002-5438-5490" target="_blank"><i class="fab fa-orcid"></i></a>
                 <a href="https://github.com/saintbenjamin" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="https://www.instagram.com/benji_johannes/" target="_blank"><i class="fab fa-instagram-square"></i></a>
                 <a href="https://www.youtube.com/channel/UCX-16rGG_fl0_pAXfvp39aQ" target="_blank"><i class="fab fa-youtube"></i></a> 
                 <!-- QR popup trigger -->
                 <button class="qr-button icon-btn qr-trigger" aria-label="Show QR code">
