--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="menus" id="bio">
                 <div class="here-icon-container">
                     <h1 class="outlined-text-superbig word-break fade-in" style="white-space: nowrap;">
-                        Benjamin Jaedon Choi (崔 在敦)&nbsp;
+                        Benjamin J. Choi&nbsp;
                         <a href="https://orcid.org/0000-0002-5438-5490" target="_blank"><i class="fab fa-orcid"></i></a>
                     </h1>
                 </div>
