--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
         </header>
         <!-- Main section -->
         <main>
-            <!-- Scripture section -->
+            <!-- Scripture -->
             <div class="menus" id="jesus">
                 <h3 class="outlined-text-big fade-in">The Word of Heavenly Father</h3>
                 <div id="jesus-container" class="xml-content fade-in"></div>
             </div>
-            <!-- Biography section -->
+            <!-- Biography -->
             <div class="menus" id="bio">
                 <div class="here-icon-container">
                     <h1 class="outlined-text-superbig word-break fade-in" style="white-space: nowrap;">
@@ -89,12 +89,12 @@
                 </ul>
                 <br/>
             </div>
-            <!-- Education section -->
+            <!-- Education -->
             <div class="menus" id="edu">
                 <h3 class="outlined-text-big fade-in">Education</h3>
                 <div id="edu-container" class="xml-content fade-in"></div>
             </div>
-            <!-- Academic Experience section -->
+            <!-- Academic Experience -->
             <div class="menus" id="academic">
                 <h3 class="outlined-text-big fade-in">Academic and Other Experience</h3>
                 <div id="exp-container" class="xml-content fade-in"></div>
@@ -126,7 +126,8 @@
                 <h3 class="outlined-text-big fade-in">External Links</h3>
                 <div id="link-container" class="xml-content fade-in"></div>
             </div>
-            <br><br><br><br><br>
+            <!-- Copyright -->
+            <br><p class="outlined-text">&copy; 2026 Benjamin J. Choi. All rights reserved.</p><br>
         </main>
         <!-- Footer section -->
         <footer>
@@ -140,7 +141,6 @@
                     <i class="fas fa-qrcode"></i>
                 </button>
             </div>
-            <!-- <p class="outlined-text">&copy; 2024 Benjamin J. Choi. All rights reserved.</p> -->
         </footer>
         <!-- Overlay for QR popup -->
         <div class="overlay" id="qrOverlay">
