--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
                 <div></div>
             </div>
             <ul class="menu">
-                <li class="outlined-text-semibig"><a href="#jesus">Jesus</a></li>
-                <li class="outlined-text-semibig"><a href="#bio">Bio.</a></li>
-                <li class="outlined-text-semibig"><a href="#edu">Edu.</a></li>
-                <li class="outlined-text-semibig"><a href="#academic">Exp.</a></li>
+                <li class="outlined-text-semibig"><a href="#jesus">Faith</a></li>
+                <li class="outlined-text-semibig"><a href="#bio">About</a></li>
+                <li class="outlined-text-semibig"><a href="#edu">Education</a></li>
+                <li class="outlined-text-semibig"><a href="#academic">Experience</a></li>
                 <li class="outlined-text-semibig"><a href="#honor">Honors</a></li>
-                <li class="outlined-text-semibig"><a href="#publication">Pub.</a></li>
-                <li class="outlined-text-semibig"><a href="#talk">Talks</a></li>
-                <li class="outlined-text-semibig"><a href="#research">R.S.</a></li>
+                <li class="outlined-text-semibig"><a href="#publication">Publications</a></li>
+                <li class="outlined-text-semibig"><a href="#talk">Presentations</a></li>
+                <li class="outlined-text-semibig"><a href="#research">Statement</a></li>
                 <li class="outlined-text-semibig"><a href="#links">Links</a></li>
             </ul>
         </header>
@@ -61,7 +61,7 @@
         <main>
             <!-- Scripture -->
             <div class="menus" id="jesus">
-                <h3 class="outlined-text-big fade-in">The Word of Heavenly Father</h3>
+                <h3 class="outlined-text-big fade-in">Scripture</h3>
                 <div id="jesus-container" class="xml-content fade-in"></div>
             </div>
             <!-- Biography -->
