--- a/index.html
+++ b/index.html
@@ -74,7 +74,19 @@
                 </div>
                 <div id="bio-container" class="xml-content fade-in"></div>
                 <ul class="no-bullets fade-in fade-content">
-                    <li class="outlined-text-semibig">E-mail: Please click <a href="https://orcid.org/0000-0002-5438-5490" target="_blank">ORCiD&nbsp;<i class="fab fa-orcid"></i></a> and use the "Verified email addresses" therein.</li>
+                    <li class="outlined-text-semibig">
+                        E-mail:
+                        <button
+                            class="email-copy"
+                            data-user="benchoi"
+                            data-domain="het.ph.tsukuba.ac.jp"
+                            aria-label="Copy email address"
+                        >
+                            <i class="fa fa-envelope"></i>
+                            <span class="sr-only">Copy email</span>
+                        </button>
+                        <span class="contact-hint">Copied to clipboard</span>
+                    </li>
                     <li>
                         <div class="here-icon-container">
                             <a href="https://github.com/saintbenjamin" target="_blank"><i class="fab fa-github"></i></a>
