--- a/index.html
+++ b/index.html
@@ -85,7 +85,10 @@
                             <i class="fa fa-envelope"></i>
                             <span class="sr-only">Copy email</span>
                         </button>
-                        <span class="contact-hint">Copied to clipboard</span>
+                        <span class="contact-hint" aria-live="polite">
+                            <i class="fa-solid fa-check" aria-hidden="true"></i>
+                            <span class="sr-only">Copied to clipboard</span>
+                        </span>
                     </li>
                     <li>
                         <div class="here-icon-container">
