--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                             <span class="sr-only">Copy email</span>
                         </button>
                         <span class="contact-hint" aria-live="polite">
-                            <i class="fa-solid fa-check" aria-hidden="true"></i>
+                            <i class="fa-regular fa-copy" aria-hidden="true"></i>
                             <span class="sr-only">Copied to clipboard</span>
                         </span>
                     </li>
