--- a/index.html
+++ b/index.html
@@ -68,39 +68,38 @@
             <div class="menus" id="bio">
                 <div class="here-icon-container">
                     <h1 class="outlined-text-superbig word-break fade-in" style="white-space: nowrap;">
-                        Benjamin J. Choi&nbsp;
+                        Benjamin J. Choi
                         <a href="https://orcid.org/0000-0002-5438-5490" target="_blank"><i class="fab fa-orcid"></i></a>
                     </h1>
                 </div>
                 <div id="bio-container" class="xml-content fade-in"></div>
-                <ul class="no-bullets fade-in fade-content">
-                    <li class="outlined-text-semibig">
-                        E-mail:
-                        <button
-                            class="email-copy"
-                            data-user="benchoi"
-                            data-domain="het.ph.tsukuba.ac.jp"
-                            aria-label="Copy email address"
-                        >
-                            <i class="fa fa-envelope"></i>
-                            <span class="sr-only">Copy email</span>
-                        </button>
-                        <span class="contact-hint" aria-live="polite">
-                            <i class="fa-regular fa-copy" aria-hidden="true"></i>
-                            <span class="sr-only">Copied to clipboard</span>
-                        </span>
-                    </li>
-                    <li>
-                        <div class="here-icon-container">
-                            <a href="https://github.com/saintbenjamin" target="_blank"><i class="fab fa-github"></i></a>
-                            <a href="https://gitlab.com/saintbenjamin" target="_blank"><i class="fab fa-gitlab"></i></a>
-                            <a href="https://saintbenjamin.wordpress.com/" target="_blank"><i class="fab fa-wordpress"></i></a>
-                            <a href="https://www.linkedin.com/in/saintbenjamin/" target="_blank"><i class="fab fa-linkedin"></i></a>
-                            <a href="https://x.com/BenjaminJChoi" target="_blank"><i class="fab fa-twitter"></i></a>
-                            <a href="https://www.instagram.com/benji_johannes/" target="_blank"><i class="fab fa-instagram-square"></i></a>
-                            <a href="https://www.facebook.com/benjamin.dion.choi" target="_blank"><i class="fab fa-facebook-square"></i></a>                
-                        </div>
-                    </li>                                        
+                <ul class="no-bullets">
+                    <ul class="no-bullets fade-in fade-content">
+                        <li class="outlined-text-semibig">
+                            <div class="here-icon-container">
+                                <a href="https://github.com/saintbenjamin" target="_blank"><i class="fab fa-github"></i></a>
+                                <a href="https://gitlab.com/saintbenjamin" target="_blank"><i class="fab fa-gitlab"></i></a>
+                                <a href="https://saintbenjamin.wordpress.com/" target="_blank"><i class="fab fa-wordpress"></i></a>
+                                <a href="https://www.linkedin.com/in/saintbenjamin/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                                <a href="https://x.com/BenjaminJChoi" target="_blank"><i class="fab fa-twitter"></i></a>
+                                <a href="https://www.instagram.com/benji_johannes/" target="_blank"><i class="fab fa-instagram-square"></i></a>
+                                <a href="https://www.facebook.com/benjamin.dion.choi" target="_blank"><i class="fab fa-facebook-square"></i></a>
+                                <button
+                                    class="email-copy"
+                                    data-user="benchoi"
+                                    data-domain="het.ph.tsukuba.ac.jp"
+                                    aria-label="Copy email address"
+                                >
+                                    <i class="fa fa-envelope"></i>
+                                    <span class="sr-only">Copy email</span>
+                                </button>
+                                <span class="contact-hint" aria-live="polite">
+                                    <i class="fa-regular fa-copy" aria-hidden="true"></i>
+                                    <span class="sr-only">Copied to clipboard</span>
+                                </span>        
+                            </div>
+                        </li>                                        
+                    </ul>
                 </ul>
                 <br/>
             </div>
