--- a/index.html
+++ b/index.html
@@ -30,7 +30,17 @@
         <div class="background"></div>
         <!-- Header section -->
         <header>
-            <div class="header-icon-container">
+            <div class="desktop-icon-container">
+                <a href="https://orcid.org/0000-0002-5438-5490" target="_blank"><i class="fab fa-orcid"></i></a>
+                <a href="https://github.com/saintbenjamin" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="https://www.instagram.com/benji_johannes/" target="_blank"><i class="fab fa-instagram-square"></i></a>
+                <a href="https://www.youtube.com/channel/UCX-16rGG_fl0_pAXfvp39aQ" target="_blank"><i class="fab fa-youtube"></i></a> 
+                <!-- QR popup trigger -->
+                <button class="qr-button icon-btn qr-trigger" aria-label="Show QR code">
+                    <i class="fas fa-qrcode"></i>
+                </button>
+            </div>
+            <div class="mobile-icon-container">
                 <a href="https://orcid.org/0000-0002-5438-5490" target="_blank"><i class="fab fa-orcid"></i></a>
                 <a href="https://github.com/saintbenjamin" target="_blank"><i class="fab fa-github"></i></a>
                 <a href="https://www.instagram.com/benji_johannes/" target="_blank"><i class="fab fa-instagram-square"></i></a>
@@ -144,18 +154,7 @@
             <br><p class="outlined-text">&copy; 2026 Benjamin J. Choi. All rights reserved.</p><br>
         </main>
         <!-- Footer section -->
-        <footer>
-            <div class="footer-icon-container">
-                <a href="https://orcid.org/0000-0002-5438-5490" target="_blank"><i class="fab fa-orcid"></i></a>
-                <a href="https://github.com/saintbenjamin" target="_blank"><i class="fab fa-github"></i></a>
-                <a href="https://www.instagram.com/benji_johannes/" target="_blank"><i class="fab fa-instagram-square"></i></a>
-                <a href="https://www.youtube.com/channel/UCX-16rGG_fl0_pAXfvp39aQ" target="_blank"><i class="fab fa-youtube"></i></a> 
-                <!-- QR popup trigger -->
-                <button class="qr-button icon-btn qr-trigger" aria-label="Show QR code">
-                    <i class="fas fa-qrcode"></i>
-                </button>
-            </div>
-        </footer>
+        <footer></footer>
         <!-- Overlay for QR popup -->
         <div class="overlay" id="qrOverlay">
             <div class="popup">
