--- a/index.html
+++ b/index.html
@@ -30,17 +30,7 @@
         <div class="background"></div>
         <!-- Header section -->
         <header>
-            <div class="desktop-icon-container">
-                <a href="https://orcid.org/0000-0002-5438-5490" target="_blank"><i class="fab fa-orcid"></i></a>
-                <a href="https://github.com/saintbenjamin" target="_blank"><i class="fab fa-github"></i></a>
-                <a href="https://www.instagram.com/benji_johannes/" target="_blank"><i class="fab fa-instagram-square"></i></a>
-                <a href="https://www.youtube.com/channel/UCX-16rGG_fl0_pAXfvp39aQ" target="_blank"><i class="fab fa-youtube"></i></a> 
-                <!-- QR popup trigger -->
-                <button class="qr-button icon-btn qr-trigger" aria-label="Show QR code">
-                    <i class="fas fa-qrcode"></i>
-                </button>
-            </div>
-            <div class="mobile-icon-container">
+            <div class="icon-container">
                 <a href="https://orcid.org/0000-0002-5438-5490" target="_blank"><i class="fab fa-orcid"></i></a>
                 <a href="https://github.com/saintbenjamin" target="_blank"><i class="fab fa-github"></i></a>
                 <a href="https://www.instagram.com/benji_johannes/" target="_blank"><i class="fab fa-instagram-square"></i></a>
