--- a/index.html
+++ b/index.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Benjamin J. Choi</title>
         <!-- Styles -->
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="css/00_tokens.css">
-        <link rel="stylesheet" href="css/10_fonts.css">
-        <link rel="stylesheet" href="css/20_base_layout.css">
-        <link rel="stylesheet" href="css/30_typography_lists.css">
-        <link rel="stylesheet" href="css/40_icons_buttons_overlays.css">
-        <link rel="stylesheet" href="css/50_menu_hamburger.css">
-        <link rel="stylesheet" href="css/60_background_content.css">
-        <link rel="stylesheet" href="css/70_arxivfeed.css">
-        <link rel="stylesheet" href="css/80_responsive.css">
+        <link
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+        rel="stylesheet"
+        />
+        <link rel="stylesheet" href="css/00_tokens.css" />
+        <link rel="stylesheet" href="css/10_fonts.css" />
+        <link rel="stylesheet" href="css/20_base_layout.css" />
+        <link rel="stylesheet" href="css/30_typography_lists.css" />
+        <link rel="stylesheet" href="css/40_icons_buttons_overlays.css" />
+        <link rel="stylesheet" href="css/50_menu_hamburger.css" />
+        <link rel="stylesheet" href="css/60_background_content.css" />
+        <link rel="stylesheet" href="css/70_arxivfeed.css" />
+        <link rel="stylesheet" href="css/80_responsive.css" />
         <!-- Favicons -->
-        <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
-        <link rel="shortcut icon" href="icons/favicon.ico">
-        <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-touch-icon.png">
-        <link rel="manifest" href="icons/site.webmanifest">
+        <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png" />
+        <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png" />
+        <link rel="shortcut icon" href="icons/favicon.ico" />
+        <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-touch-icon.png" />
+        <link rel="manifest" href="icons/site.webmanifest" />
         <!-- arXiv feed -->
         <script src="js/arxiv_config.js"></script>
         <script src="https://arxiv.org/js/myarticles.js"></script>
@@ -30,126 +33,213 @@
         <div class="background"></div>
         <!-- Header section -->
         <header>
-            <div class="icon-container">
-                <a href="https://orcid.org/0000-0002-5438-5490" target="_blank"><i class="fab fa-orcid"></i></a>
-                <a href="https://github.com/saintbenjamin" target="_blank"><i class="fab fa-github"></i></a>
-                <!-- QR popup trigger -->
-                <button class="qr-button icon-btn qr-trigger" aria-label="Show QR code">
-                    <i class="fas fa-qrcode"></i>
-                </button>
-            </div>
-            <div class="hamburger" onclick="toggleMenu()">
-                <div></div>
-                <div></div>
-                <div></div>
-            </div>
-            <ul class="menu">
-                <li class="outlined-text-semibig"><a href="#jesus">Faith</a></li>
-                <li class="outlined-text-semibig"><a href="#bio">About</a></li>
-                <li class="outlined-text-semibig"><a href="#edu">Education</a></li>
-                <li class="outlined-text-semibig"><a href="#academic">Experience</a></li>
-                <li class="outlined-text-semibig"><a href="#honor">Honors</a></li>
-                <li class="outlined-text-semibig"><a href="#publication">Publications</a></li>
-                <li class="outlined-text-semibig"><a href="#talk">Presentations</a></li>
-                <li class="outlined-text-semibig"><a href="#research">Statement</a></li>
-                <li class="outlined-text-semibig"><a href="#links">Links</a></li>
-            </ul>
+        <!-- Header icon bar -->
+        <div class="icon-bar icon-container">
+            <a
+            href="https://orcid.org/0000-0002-5438-5490"
+            target="_blank"
+            rel="noopener noreferrer"
+            aria-label="ORCID"
+            >
+            <i class="fab fa-orcid" aria-hidden="true"></i>
+            </a>
+            <a
+            href="https://github.com/saintbenjamin"
+            target="_blank"
+            rel="noopener noreferrer"
+            aria-label="GitHub"
+            >
+            <i class="fab fa-github" aria-hidden="true"></i>
+            </a>
+            <!-- QR popup trigger -->
+            <button
+            type="button"
+            class="qr-button icon-btn qr-trigger"
+            aria-label="Show QR code"
+            >
+            <i class="fas fa-qrcode" aria-hidden="true"></i>
+            </button>
+        </div>
+        <!-- Hamburger -->
+        <button
+            type="button"
+            class="hamburger"
+            aria-label="Open menu"
+            aria-expanded="false"
+            aria-controls="site-menu"
+        >
+            <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
+        </button>
+        <!-- Menu -->
+        <ul class="menu" id="site-menu">
+            <li class="outlined-text-semibig"><a href="#jesus">Faith</a></li>
+            <li class="outlined-text-semibig"><a href="#bio">About</a></li>
+            <li class="outlined-text-semibig"><a href="#edu">Education</a></li>
+            <li class="outlined-text-semibig"><a href="#academic">Experience</a></li>
+            <li class="outlined-text-semibig"><a href="#honor">Honors</a></li>
+            <li class="outlined-text-semibig"><a href="#publication">Publications</a></li>
+            <li class="outlined-text-semibig"><a href="#talk">Presentations</a></li>
+            <li class="outlined-text-semibig"><a href="#research">Statement</a></li>
+            <li class="outlined-text-semibig"><a href="#links">Links</a></li>
+        </ul>
         </header>
         <!-- Main section -->
         <main>
             <!-- Scripture -->
-            <div class="menus" id="jesus">
+            <section class="menus" id="jesus">
                 <h3 class="outlined-text-big fade-in">Scripture</h3>
                 <div id="jesus-container" class="xml-content fade-in"></div>
-            </div>
+            </section>
             <!-- Biography -->
-            <div class="menus" id="bio">
+            <section class="menus" id="bio">
                 <div class="here-icon-container">
-                    <h1 class="outlined-text-superbig word-break fade-in" style="white-space: nowrap;">
-                        Benjamin J. Choi
-                        <a href="https://orcid.org/0000-0002-5438-5490" target="_blank"><i class="fab fa-orcid"></i></a>
-                    </h1>
+                <h1 class="outlined-text-superbig word-break fade-in" style="white-space: nowrap;">
+                    Benjamin J. Choi
+                    <a
+                    href="https://orcid.org/0000-0002-5438-5490"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    aria-label="ORCID"
+                    >
+                    <i class="fab fa-orcid" aria-hidden="true"></i>
+                    </a>
+                </h1>
                 </div>
                 <div id="bio-container" class="xml-content fade-in"></div>
-                <ul class="no-bullets">
-                    <ul class="no-bullets fade-in fade-content">
-                        <li class="outlined-text-semibig">
-                            <div class="here-icon-container">
-                                <a href="https://github.com/saintbenjamin" target="_blank"><i class="fab fa-github"></i></a>
-                                <a href="https://gitlab.com/saintbenjamin" target="_blank"><i class="fab fa-gitlab"></i></a>
-                                <a href="https://saintbenjamin.wordpress.com/" target="_blank"><i class="fab fa-wordpress"></i></a>
-                                <a href="https://www.linkedin.com/in/saintbenjamin/" target="_blank"><i class="fab fa-linkedin"></i></a>
-                                <a href="https://x.com/BenjaminJChoi" target="_blank"><i class="fab fa-twitter"></i></a>
-                                <a href="https://www.instagram.com/benji_johannes/" target="_blank"><i class="fab fa-instagram-square"></i></a>
-                                <a href="https://www.facebook.com/benjamin.dion.choi" target="_blank"><i class="fab fa-facebook-square"></i></a>
-                                <button
-                                    class="email-copy"
-                                    data-user="benchoi"
-                                    data-domain="het.ph.tsukuba.ac.jp"
-                                    aria-label="Copy email address"
-                                >
-                                    <i class="fa fa-envelope"></i>
-                                    <span class="sr-only">Copy email</span>
-                                </button>
-                                <span class="contact-hint" aria-live="polite">
-                                    <i class="fa-regular fa-copy" aria-hidden="true"></i>
-                                    <span class="sr-only">Copied to clipboard</span>
-                                </span>        
-                            </div>
-                        </li>                                        
-                    </ul>
+                <!-- Contact icon bar (fixed invalid ul nesting) -->
+                <ul class="no-bullets fade-in fade-content">
+                <li class="outlined-text-semibig">
+                    <div class="icon-bar here-icon-container">
+                    <a
+                        href="https://github.com/saintbenjamin"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        aria-label="GitHub"
+                    >
+                        <i class="fab fa-github" aria-hidden="true"></i>
+                    </a>
+                    <a
+                        href="https://gitlab.com/saintbenjamin"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        aria-label="GitLab"
+                    >
+                        <i class="fab fa-gitlab" aria-hidden="true"></i>
+                    </a>
+                    <a
+                        href="https://saintbenjamin.wordpress.com/"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        aria-label="WordPress"
+                    >
+                        <i class="fab fa-wordpress" aria-hidden="true"></i>
+                    </a>
+                    <a
+                        href="https://www.linkedin.com/in/saintbenjamin/"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        aria-label="LinkedIn"
+                    >
+                        <i class="fab fa-linkedin" aria-hidden="true"></i>
+                    </a>
+                    <a
+                        href="https://x.com/BenjaminJChoi"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        aria-label="X"
+                    >
+                        <i class="fab fa-twitter" aria-hidden="true"></i>
+                    </a>
+                    <a
+                        href="https://www.instagram.com/benji_johannes/"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        aria-label="Instagram"
+                    >
+                        <i class="fab fa-instagram-square" aria-hidden="true"></i>
+                    </a>
+                    <a
+                        href="https://www.facebook.com/benjamin.dion.choi"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        aria-label="Facebook"
+                    >
+                        <i class="fab fa-facebook-square" aria-hidden="true"></i>
+                    </a>
+                    <button
+                        type="button"
+                        class="email-copy"
+                        data-user="benchoi"
+                        data-domain="het.ph.tsukuba.ac.jp"
+                        aria-label="Copy email address"
+                    >
+                        <i class="fa fa-envelope" aria-hidden="true"></i>
+                        <span class="sr-only">Copy email</span>
+                    </button>
+                    <span class="contact-hint" aria-live="polite">
+                        <i class="fa-regular fa-copy" aria-hidden="true"></i>
+                        <span class="sr-only">Copied to clipboard</span>
+                    </span>
+                    </div>
+                </li>
                 </ul>
-                <br/>
-            </div>
+                <br />
+            </section>
             <!-- Education -->
-            <div class="menus" id="edu">
+            <section class="menus" id="edu">
                 <h3 class="outlined-text-big fade-in">Education</h3>
                 <div id="edu-container" class="xml-content fade-in"></div>
-            </div>
+            </section>
             <!-- Academic Experience -->
-            <div class="menus" id="academic">
+            <section class="menus" id="academic">
                 <h3 class="outlined-text-big fade-in">Academic and Other Experience</h3>
                 <div id="exp-container" class="xml-content fade-in"></div>
-            </div>
+            </section>
             <!-- Honors / Awards -->
-            <div class="menus" id="honor">
+            <section class="menus" id="honor">
                 <h3 class="outlined-text-big fade-in">Honors</h3>
                 <div id="honor-container" class="xml-content fade-in"></div>
-            </div>
+            </section>
             <!-- Publications (arXiv feed) -->
-            <div class="menus" id="publication">
+            <section class="menus" id="publication">
                 <h3 class="outlined-text-big fade-in">Publications</h3>
                 <div id="pub-container" class="xml-content fade-in">
-                    <div id="arxivfeed">Loading arXiv articles...</div>
+                <div id="arxivfeed">Loading arXiv articles...</div>
                 </div>
-            </div>
+            </section>
             <!-- Talks / Presentations -->
-            <div class="menus" id="talk">
+            <section class="menus" id="talk">
                 <h3 class="outlined-text-big fade-in">Presentations</h3>
                 <div id="talk-container" class="xml-content"></div>
-            </div>
+            </section>
             <!-- Research Statement -->
-            <div class="menus" id="research">
+            <section class="menus" id="research">
                 <h3 class="outlined-text-big fade-in">Research Statement</h3>
                 <div class="content" id="res-sta"></div>
-            </div>
+            </section>
             <!-- External links -->
-            <div class="menus" id="links">
+            <section class="menus" id="links">
                 <h3 class="outlined-text-big fade-in">External Links</h3>
                 <div id="link-container" class="xml-content fade-in"></div>
-            </div>
+            </section>
             <!-- Copyright -->
-            <br><p class="outlined-text">&copy; 2026 Benjamin J. Choi. All rights reserved.</p><br>
+            <br />
+            <p class="outlined-text">&copy; 2026 Benjamin J. Choi. All rights reserved.</p>
+            <br />
         </main>
         <!-- Footer section -->
         <footer></footer>
         <!-- Overlay for QR popup -->
-        <div class="overlay" id="qrOverlay">
-            <div class="popup">
-                <button class="close-btn" id="closeQrButton">&times;</button>
-                <img src="img/qr_code.png" alt="QR Code">
-                <p>Benjamin J. Choi</p>
-            </div>
+        <div class="overlay" id="qrOverlay" role="dialog" aria-modal="true" aria-label="QR code">
+        <div class="popup">
+            <button type="button" class="close-btn" id="closeQrButton" aria-label="Close">
+            &times;
+            </button>
+            <img src="img/qr_code.png" alt="QR Code" />
+            <p>Benjamin J. Choi</p>
+        </div>
         </div>
         <!-- Scripts -->
         <script src="js/mathjax_config.js" defer></script>
