--- a/index.html
+++ b/index.html
@@ -74,15 +74,15 @@
         </button>
         <!-- Menu -->
         <ul class="menu" id="site-menu">
-            <li class="outlined-text-semibig"><a href="#jesus">Faith</a></li>
-            <li class="outlined-text-semibig"><a href="#bio">About</a></li>
-            <li class="outlined-text-semibig"><a href="#edu">Education</a></li>
-            <li class="outlined-text-semibig"><a href="#academic">Experience</a></li>
-            <li class="outlined-text-semibig"><a href="#honor">Honors</a></li>
-            <li class="outlined-text-semibig"><a href="#publication">Publications</a></li>
-            <li class="outlined-text-semibig"><a href="#talk">Presentations</a></li>
-            <li class="outlined-text-semibig"><a href="#research">Statement</a></li>
-            <li class="outlined-text-semibig"><a href="#links">Links</a></li>
+            <li class="outlined-text-semibig"><a href="#jesus" aria-current="page">Faith</a></li>
+            <li class="outlined-text-semibig"><a href="#bio" aria-current="page">About</a></li>
+            <li class="outlined-text-semibig"><a href="#edu" aria-current="page">Education</a></li>
+            <li class="outlined-text-semibig"><a href="#academic" aria-current="page">Experience</a></li>
+            <li class="outlined-text-semibig"><a href="#honor" aria-current="page">Honors</a></li>
+            <li class="outlined-text-semibig"><a href="#publication" aria-current="page">Publications</a></li>
+            <li class="outlined-text-semibig"><a href="#talk" aria-current="page">Presentations</a></li>
+            <li class="outlined-text-semibig"><a href="#research" aria-current="page">Statement</a></li>
+            <li class="outlined-text-semibig"><a href="#links" aria-current="page">Links</a></li>
         </ul>
         </header>
         <!-- Main section -->
@@ -226,7 +226,7 @@
             </section>
             <!-- Copyright -->
             <br />
-            <p class="outlined-text">&copy; 2026 Benjamin J. Choi. All rights reserved.</p>
+            <p class="outlined-text fade-in">&copy; 2026 Benjamin J. Choi. All rights reserved.</p>
             <br />
         </main>
         <!-- Footer section -->
