--- a/index.html
+++ b/index.html
@@ -212,12 +212,12 @@
             <!-- Talks / Presentations -->
             <section class="menus" id="talk">
                 <h3 class="outlined-text-big fade-in">Presentations</h3>
-                <div id="talk-container" class="xml-content"></div>
+                <div id="talk-container" class="xml-content fade-in"></div>
             </section>
             <!-- Research Statement -->
             <section class="menus" id="research">
                 <h3 class="outlined-text-big fade-in">Research Statement</h3>
-                <div class="content" id="res-sta"></div>
+                <div class="content fade-in" id="res-sta"></div>
             </section>
             <!-- External links -->
             <section class="menus" id="links">
