--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
             <!-- Research Statement -->
             <section class="menus" id="research">
                 <h3 class="outlined-text-big fade-in">Research Statement</h3>
-                <div class="content fade-in" id="res-sta"></div>
+                <div class="content" id="res-sta"></div>
             </section>
             <!-- External links -->
             <section class="menus" id="links">
