--- a/index.html
+++ b/index.html
@@ -231,15 +231,26 @@
         </main>
         <!-- Footer section -->
         <footer></footer>
-        <!-- Overlay for QR popup -->
-        <div class="overlay" id="qrOverlay" role="dialog" aria-modal="true" aria-label="QR code">
-        <div class="popup">
-            <button type="button" class="close-btn" id="closeQrButton" aria-label="Close">
-            &times;
-            </button>
-            <img src="img/qr_code.png" alt="QR Code" />
-            <p>Benjamin J. Choi</p>
-        </div>
+        <!-- QR Overlay -->
+        <div
+        class="overlay"
+        id="qrOverlay"
+        role="dialog"
+        aria-modal="true"
+        aria-label="QR code"
+        >
+            <div class="popup">
+                <button
+                type="button"
+                class="close-btn"
+                id="closeQrButton"
+                aria-label="Close"
+                >
+                &times;
+                </button>
+                <img src="img/qr_code.png" alt="QR Code" />
+                <p>Benjamin J. Choi</p>
+            </div>
         </div>
         <!-- Scripts -->
         <script src="js/mathjax_config.js" defer></script>
